# Muon-lifetime

./: CMakeLists.txt  README.md  Scintillator.cc  run_vis.mac
analysis/: Scintillation_photons.ipynb  al_2000_output.txt  digital_output.py  ex_analysis.py  photons.ipynb  pmt_photons.py  scintillator_split.py  time_fit.py
analysis/.ipynb_checkpoints/: Scintillation_photons-checkpoint.ipynb
include/: EventAction.hh  RunAction.hh  SteppingAction.hh  action.hh  construction.hh  detector.hh  generator.hh  physics.hh
src/: EventAction.cc  RunAction.cc  SteppingAction.cc  action.cc  construction.cc  detector.cc  generator.cc  physics.cc
